--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     --fw-reg: 300;
     --fw-bold: 750;
 
-    --clr-light: #ffffff;
+    --clr-light: #ede7d7;
     --clr-dark: #000000;
     --clr-accent: #c3b091;
 
@@ -270,6 +270,15 @@ header {
         z-index: 2;
     }
 
+    .portfolio-intro__img {
+        grid-area: img;
+        max-width: 250px;
+        max-height: 318.05px;
+        position: relative;
+        z-index: 2;
+    }
+
+
     .section__subtitle--intro {
         align-self: start;
         grid-column: -1 / 1;
@@ -409,6 +418,14 @@ header {
 .portfolio__item:focus .portfolio__image {
     transform: scale(1.2);
     opacity: .5;
+}
+
+.portfolio-item-individual__interests {
+display: flex;
+max-height: 1000px;
+max-width: 750px;
+margin-left: auto;
+margin-right: auto;
 }
 
 /* Footer */
